tests/snapshots/recovery_tests__extra_brace.snap
---
source: tests/recovery_tests.rs
expression: program
---
Program {
    statements: [
        If {
            condition: Boolean {
                value: true,
                span: Span {
                    start: 14,
                    end: 18,
                },
            },
            then_block: [
                Echo {
                    exprs: [
                        Integer {
                            value: [
                                49,
                            ],
                            span: Span {
                                start: 35,
                                end: 36,
                            },
                        },
                    ],
                    span: Span {
                        start: 30,
                        end: 43,
                    },
                },
            ],
            else_block: None,
            span: Span {
                start: 10,
                end: 49,
            },
        },
        Error {
            span: Span {
                start: 48,
                end: 49,
            },
        },
        Echo {
            exprs: [
                Integer {
                    value: [
                        50,
                    ],
                    span: Span {
                        start: 59,
                        end: 60,
                    },
                },
            ],
            span: Span {
                start: 54,
                end: 66,
            },
        },
    ],
    errors: [
        ParseError {
            span: Span {
                start: 48,
                end: 49,
            },
            message: "Unexpected '}'",
        },
    ],
    span: Span {
        start: 10,
        end: 66,
    },
}
