tests/snapshots/recovery_tests__missing_semicolon.snap
---
source: tests/recovery_tests.rs
expression: program
---
Program {
    statements: [
        Echo {
            exprs: [
                Integer {
                    value: [
                        49,
                    ],
                    span: Span {
                        start: 15,
                        end: 16,
                    },
                },
            ],
            span: Span {
                start: 10,
                end: 33,
            },
        },
    ],
    errors: [
        ParseError {
            span: Span {
                start: 21,
                end: 25,
            },
            message: "Missing semicolon",
        },
    ],
    span: Span {
        start: 10,
        end: 33,
    },
}
